--- a/projeto-social/index.html
+++ b/projeto-social/index.html
@@ -11,9 +11,11 @@
 <body>
     <main>
         <section id="telefone">
-
+            <iframe src="home.html" frameborder="0" name="tela" id="tela" scrolling="no">
+                Seu dispositivo não é compativel com este iframe.
+            </iframe>
         </section>
-        
+
         <section id="redes-sociais">
 
         </section>
